--- a/data-layers/Sanjdata-layer-descriptions.qmd
+++ b/data-layers/Sanjdata-layer-descriptions.qmd
@@ -112,34 +112,24 @@ kable(ds_source) %>%
 ```
 :::
 
-# RETURN TO THIS!
+::: {.callout-note collapse="true"}
+### Table 7.3: Base Table (click to expand)
 
-<!-- {r child = 'layers_all.Rmd'} -->
+```{r DataBase Table, echo=FALSE, warning=FALSE, error=FALSE, messages=FALSE}
+## get source data
+ds_base_source <- read.csv("https://raw.githubusercontent.com/OHI-Science/ohi-global/76634d93f7fbc2470a2144793d15924d55f552ff/metadata_documentation/layers_eez_base.csv")
+  
 
-<!-- ## Need to run CombineLayers.R to create the relevant Rmd file -->
+kable(ds_base_source) %>%
+  kableExtra::kable_styling(full_width = F)
+```
+:::
 
-<!-- # 'https://raw.githubusercontent.com/OHI-Science/ohi-global/draft/documents/methods/layers_all.Rmd' -->
 
-Notes for continuing this work:
 
--   consider making this into 2 sections with the first 2 tables in the first section and the veeeeery long github user content (all layers Rmd) as the second section (it's extremely long... like super long and could be frustrating for users).
-
--   look into formatting of long tables in Quarto websites (currently annoying to scroll to the side to read the full width of the long table -- see Table 7.1) -- floating/hover (not anchored to the bottom) scroll bar (horizontal scroll bar)
-
--   make a section of which data layers apply to which goals -- like Table 7.1, maybe just edit it so Dimension (goal/subgoal) is before description?
-
--   consider renaming tables (current names not awesome)
-
--   try reading in the githubuser content (even though it's super long, could be good to just see what it looks like...)
 
 # Supplemental Methods by Layer
 
-```{r}
-#| file: ../data-layers/layers_all.Rmd
-#| eval: false
-#| echo: true
-#| code-folding: true
-```
 
 ## Artisanal fisheries management effectiveness
 #### [fp_artisanal](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/fp_artisanal.csv)
@@ -149,8 +139,6 @@ Notes for continuing this work:
 *Category: ecological/regulatory*
 
 *Subcategory: fishing*
-
-See **`r layer_meta$name[layer_meta$layer == 'ao_access']`** data layer for information about data and methods.
 
 
 https://raw.githubusercontent.com/OHI-Science/ohi-global/647c92a81ed43c51cc20f3ece98ecdeb951d3672/metadata_documentation/ohi_model/layers_info/ao_access.Rmd
@@ -299,9 +287,8 @@ Port data was based on the volume (measured in tonnes) of goods transported thro
 ## Chemical pollution trend 
 #### [cw_chemical_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/cw_chemical_trend.csv) {-} 
 
-See description for **`r layer_meta$name[layer_meta$layer == 'po_chemicals']`** layer.
 
-The inverse of the pressure data (1 - `r layer_meta$name[layer_meta$layer == 'po_chemicals_3nm']`) was used to estimate chemical trends for the clean water goal. The proportional yearly change in chemical pressure values were estimated using a linear regression model of the most recent five years of data (i.e., slope divided by value from the earliest year included in the regression model).  The slope was then multiplied by five to get the predicted change in 5 years.  
+The inverse of the pressure data (1 - `po_chemicals_3nm`) was used to estimate chemical trends for the clean water goal. The proportional yearly change in chemical pressure values were estimated using a linear regression model of the most recent five years of data (i.e., slope divided by value from the earliest year included in the regression model).  The slope was then multiplied by five to get the predicted change in 5 years.  
 
 The only layer with yearly data was land-based organic pollution (pesticide data). The land-based inorganic pollution (using impermeable surfaces as a proxy) and ocean pollution (shipping and ports) remained the same across years.
 
@@ -317,9 +304,8 @@ The only layer with yearly data was land-based organic pollution (pesticide data
 
 *Subcategory: pollution*
 
-See description for **`r layer_meta$name[layer_meta$layer == 'po_chemicals']`**.
 
-Methods follow those described for the **`r layer_meta$name[layer_meta$layer == 'po_chemicals']`** layer.  However, the rescaled data were clipped to include only pixels within 3nm offshore, and the zonal mean for each region was calculated using this subset of data.
+Methods follow those described in Table 7.3 in `po_chemicals` layer.  However, the rescaled data were clipped to include only pixels within 3nm offshore, and the zonal mean for each region was calculated using this subset of data.
 
 For the clean waters goal calculations, the inverse of the pressure values is used (1 minus chemical pressure).
 
@@ -335,9 +321,8 @@ For the clean waters goal calculations, the inverse of the pressure values is us
 
 *Subcategory: pollution*
 
-See description for **`r layer_meta$name[layer_meta$layer == 'po_nutrients']`**.
 
-Methods follow those described for the **`r layer_meta$name[layer_meta$layer == 'po_nutrients']`** layer.  However, the rescaled data were clipped to include only pixels within 3nm offshore, and the zonal mean for each region was calculated using this subset of data.
+Methods follow those described in Table 7.3 in `po_nutrients` layer.  However, the rescaled data were clipped to include only pixels within 3nm offshore, and the zonal mean for each region was calculated using this subset of data.
 
 For the clean waters goal calculations, the inverse of the pressure values is used (1 minus nutrient pressure).
 
@@ -353,7 +338,7 @@ For the clean waters goal calculations, the inverse of the pressure values is us
 
 *Subcategory: fishing*
 
-These data are calculated using the lasting special places status subgoal model using total marine protected area (km^2^) within 3 nm offshore (see **`r layer_meta$name[layer_meta$layer == 'lsp_prot_area_offshore3nm']`** layer for information about the data). Following the lasting special places model, a reference point of 30% is used, such that any region with 30%, or more, protected area receives a score of 1. 
+These data are calculated using the lasting special places status subgoal model using total marine protected area (km^2^) within 3 nm offshore (see Table 7.3 in `lsp_prot_area_offshore3nm` layer for information about the data). Following the lasting special places model, a reference point of 30% is used, such that any region with 30%, or more, protected area receives a score of 1. 
 
 #### Units {-} 
  scaled 0-1
@@ -367,7 +352,6 @@ These data are calculated using the lasting special places status subgoal model 
 
 *Subcategory: habitat*
 
-See **`r layer_meta$name[layer_meta$layer == 'fp_mpa_coast']`** for information about this layer.
 
 #### Units {-} 
  scaled 0-1
@@ -418,7 +402,7 @@ The total tonnes of coral harvest were determined for each region using export d
 
 *Subcategory: fishing*
 
-These data are calculated using the lasting special places status subgoal model (except this calculation is based on the entire eez region vs. 3 nm offshore), using the total marine protected area (km^2^) within the offshore eez region (see the **`r layer_meta$name[layer_meta$layer == 'lsp_prot_area_offshore3nm']`** layer for information about the data). Following to the lasting special places model, a reference point of 30% is used, such that any region with 30%, or more, protected area receives a score of 1. 
+These data are calculated using the lasting special places status subgoal model (except this calculation is based on the entire eez region vs. 3 nm offshore), using the total marine protected area (km^2^) within the offshore eez region. Following to the lasting special places model, a reference point of 30% is used, such that any region with 30%, or more, protected area receives a score of 1. 
 
 #### Units {-} 
  scaled 0-1
@@ -431,8 +415,6 @@ These data are calculated using the lasting special places status subgoal model 
 *Category: ecological/regulatory*
 
 *Subcategory: habitat*
-
-See **`r layer_meta$name[layer_meta$layer == 'fp_mpa_eez']`** for information about this layer.
 
 #### Units {-} 
  scaled 0-1
@@ -504,8 +486,6 @@ WTTC reports dollar values of visitor exports (spending by foreign visitors) and
  
  ## Economic trend scores 
 #### [eco_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/eco_trend.csv) {-} 
-
-See **`r layer_meta$name[layer_meta$layer == 'eco_status']`** layer for more information about data and methods.  
 
 This layer provides calculated trend values for the economies subgoal.  Economies is calculated using revenue data from marine sectors. 
 
@@ -586,7 +566,6 @@ The World Economic Forum's Global Competitiveness Index (GCI) provides a country
 ## Habitat condition of coral 
 #### [hab_coral_health](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_coral_health.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_coral_extent']`** layer for more information.
 
 Coral condition was calculated using current condition data divided by reference condition.  We used condition data from percent live coral cover from 12,634 surveys from 1975-2006 [@bruno_regional_2016; @schutte2010regional]. When multiple data points were available for the same site and year, we averaged these data, and also averaged the site data to calculate a per country per year average. However, data were missing for several countries and some countries did not have data for the reference or current year time periods or had only 1-2 surveys. Because coral cover can be highly temporally and spatially dynamic, having only a few surveys that may have been motivated by different reasons (i.e., documenting a pristine or an impacted habitat) can bias results. To calculate condition we used fitted values from a linear trend of all data per country, which was more robust to data poor situations and allowed us to take advantage of periods of intense sampling that did not always include both current and reference years. Then, we created a fitted linear model of all these data points from 1975-2010, provided that 2 or more points are in 1980-1995 and 2 or more points are in 2000-2010. We defined the ‘current’ condition (health) as the mean of the predicted values for 2008-2010, and the reference condition as the mean of the predicted values for 1985-1987. Where country data were not available, we used an average from adjacent EEZs weighted by habitat area, or a georegional average weighted by habitat area, based on countries within the same ocean basin (Figure 7.1).
 
@@ -599,8 +578,6 @@ Coral condition was calculated using current condition data divided by reference
 ## Habitat condition of kelp 
 #### [hab_kelp_health](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_kelp_health.csv) {-}
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_seagrass_extent']`** layer for more information.
-
 An increasing or stable trend was assigned condition = 1.0, and a decreasing trend was assigned condition = 0.64, based on a 2% global yearly loss of kelp for 50 years. There is likely to be much spatial variation that isn't accounted for by using a global value, but we are limited by the availability of data. Data was from Status and Trends for the World’s Kelp Forests [@wernberg2019status]. 
 
 #### Units {-} 
@@ -608,8 +585,6 @@ An increasing or stable trend was assigned condition = 1.0, and a decreasing tre
  
 ## Habitat condition of mangrove 
 #### [hab_mangrove_health](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_mangrove_health.csv) {-} 
-
-See **`r layer_meta$name[layer_meta$layer == 'hab_mangrove_extent']`** layer for more information.
 
 
 Mangrove condition was defined as the current cover divided by reference cover. 2020 extents from Global Mangrove Watch [-@bunting2022global] were used as current cover. Reference covers for most regions were 1980 estimates retrieved from FAO Forestry Paper 153 [@unitednations2007world]. Regions for which 1980 estimates were not available instead used 1996 estimates from Global Mangrove Watch [-@bunting2022global] as reference covers. 
@@ -620,8 +595,6 @@ Mangrove condition was defined as the current cover divided by reference cover. 
 ## Habitat condition of saltmarsh 
 #### [hab_saltmarsh_health](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_saltmarsh_health.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_saltmarsh_extent']`** layer for more information.
-
 
 Due to a severe lack of historical data, a global conservative condition score of 0.75 was given to every region based on an estimated 25%-50% loss [@mcowen2017]. There is likely to be much spatial variation that isn't accounted for by using a global value, but we are limited by the availability of data.
 
@@ -631,8 +604,6 @@ Due to a severe lack of historical data, a global conservative condition score o
 ## Habitat condition of seagrass 
 #### [hab_seagrass_health](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_seagrass_health.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_seagrass_extent']`** layer for more information.
-
 An increasing or stable trend was assigned condition = 1.0, and a decreasing trend was assigned condition = 0.71. 0.71 reflects global loss since 1879 (29% loss of known areal extent); however, most of the loss is expected to have occurred since 1990. There is likely to be much spatial variation that isn't accounted for by using a global value, but we are limited by the availability of data. Data was from @waycott2009accelerating. 
 
 #### Units {-} 
@@ -640,8 +611,6 @@ An increasing or stable trend was assigned condition = 1.0, and a decreasing tre
  
 ## Habitat condition of seaice 
 #### [hab_seaice_health](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_seaice_health.csv) {-}
-
-See **`r layer_meta$name[layer_meta$layer == 'hab_seaice_extent']`** layer for more information.
 
 Sea-ice condition was calculated using sea-ice concentrations from the USA National Snow and Ice Data Center (@digirolamo2022; [https://nsidc.org/cryosphere/quickfacts/seaice.html](https://nsidc.org/cryosphere/quickfacts/seaice.html)) as the current percent cover of sea-ice (average of 3 years of data) divided by the average historical percent cover, defined as the start of the data (1979) until the year 2000 as recommended by the National Snow & Ice Data Center for both sea-ice edge and sea-ice shoreline habitats. 
 
@@ -665,9 +634,6 @@ Because the distribution of fishing effort density values for each region was ex
 ## Habitat condition of tidal flat 
 #### [hab_tidal_flat_health](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_tidal_flat_health.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_tidal_flat_extent']`** layer for more information.
-
-
 Tidal flat condition was defined as the current cover divided by reference cover. For current cover we use the average of the 2010 and 2013 extent. The reference cover is the average cover of 1989 and 1992. 
 
 #### Units {-} 
@@ -675,8 +641,6 @@ Tidal flat condition was defined as the current cover divided by reference cover
  
 ## Habitat condition trend of coral 
 #### [hab_coral_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_coral_trend.csv) {-}
-
-See **`r layer_meta$name[layer_meta$layer == 'hab_coral_extent']`** layer for more information.
 
 Coral trend was calculated using condition data from 1975-2006 [@bruno_regional_2016; @schutte2010regional].
 
@@ -686,8 +650,6 @@ Coral trend was calculated using condition data from 1975-2006 [@bruno_regional_
 ## Habitat condition trend of kelp 
 #### [hab_kelp_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_kelp_trend.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_seagrass_extent']`** layer for more information.
-
 Trend in kelp condition was determined using "Global patterns of kelp forest change over the past half-century" [@krumhansl2016global]. Krumhansl et al. [-@krumhansl2016global] calculated marine ecoregional kelp trend values using Bayesian hierarchical linear models. We extract these trends per the Marine Ecoregions of the World (MEOW) [@spalding2007marine], and a take weighted area mean to get final trends per region represented in the paper. Finally, where country data were not available, we gapfill by the georegional average. 
 
 #### Units {-} 
@@ -695,8 +657,6 @@ Trend in kelp condition was determined using "Global patterns of kelp forest cha
  
 ## Habitat condition trend of mangrove 
 #### [hab_mangrove_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_mangrove_trend.csv) {-}
-
-See **`r layer_meta$name[layer_meta$layer == 'hab_mangrove_extent']`** layer for more information.
 
 
 We used Global Mangrove Watch [-@bunting2022global] mangrove extent data to estimate the proportional yearly change in mangrove area using a linear regression model of years from 2007 up to the year in question. This length of data is longer than we usually do (typically 5 years), but we feel we get a better estimate using this period of time. Proportional yearly change is determined by first dividing yearly extents by the extent from the earliest year in the model. Year is then regressed on those proportions, and the resulting slope is multiplied by 5 to get the predicted change in five years. The original mangrove extent data are provided yearly (2007, 2008, 2009, 2010, 2015, 2016, 2017, 2018, 2019, 2020) in the form of polygons - these are subsequently rasterized to match our regions and extract the area.
@@ -707,8 +667,6 @@ We used Global Mangrove Watch [-@bunting2022global] mangrove extent data to esti
 ## Habitat condition trend of saltmarsh 
 #### [hab_saltmarsh_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_saltmarsh_trend.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_saltmarsh_extent']`** layer for more information.
-
 A general 0.28% per year decerasing trend in salt marsh area was applied to every region [@campbell2022]. There is likely to be much spatial variation that isn't accounted for by using a global value, but we are limited by the availability of data.
 
 #### Units {-} 
@@ -717,8 +675,6 @@ A general 0.28% per year decerasing trend in salt marsh area was applied to ever
 ## Habitat condition trend of seagrass 
 #### [hab_seagrass_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_seagrass_trend.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_seagrass_extent']`** layer for more information.
-
 Trend in seagrass condition was determined using three data sources [@waycott2009accelerating, @short2011extinction, @iucn_spatial_2022). Short et al. [-@short2011extinction] measured percent percent cover on a per sample, per site, per year basis, and determined species population trends (increasing, decreasing, or stable). The IUCN Red List of Threatened Species also provides species population trends (increasing, decreasing, or stable). Waycott et al. [-@waycott2009accelerating] measured habitat area on a per site, per year basis. We used the population trends from @short2011extinction and the IUCN Red List of Threatened Species [@iucn2022] to assign population trends to the IUCN species distribution maps [@iucn_spatial_2022]. Then we used median rate of change per year (%) from Waycott et al. [-@waycott2009accelerating] (Table S2) to assign numerical trend values to each species population trend (-0.0767 for decreasing, 0 for stable, and 0.0845 for increasing). Following this we gapfill missing trends first by species family average, and then by the global seagrass average trend. We calculate the trend per OHI region using an average weighted by species distribution area. Finally, where country data were not available, we gapfill by the georegional average. 
  
 #### Units {-} 
@@ -726,8 +682,6 @@ Trend in seagrass condition was determined using three data sources [@waycott200
  
 ## Habitat condition trend of seaice 
 #### [hab_seaice_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_seaice_trend.csv) {-}
-
-See **`r layer_meta$name[layer_meta$layer == 'hab_seaice_extent']`** layer for more information.
 
 Trends for sea-ice edge and sea-ice shoreline habitats were calculated using sea-ice concentrations from the USA National Snow and Ice Data Center (@digirolamo2022; [https://nsidc.org/cryosphere/quickfacts/seaice.html](https://nsidc.org/cryosphere/quickfacts/seaice.html)). The average yearly proportional change in extent was estimated using a linear regression model that included the most recent five years of data (e.g., slope estimate was divided by the extent for earliest year included in the regression model), and this value was multiplied by five to get the predicted change in 5 years. Each year of data represents a 3-year average, to smooth yearly variation.    
 
@@ -848,8 +802,6 @@ Data is generated in ohi-global/eez/conf/functions.R.
 ## Habitat trend of tidal flat 
 #### [hab_tidal_flat_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/hab_tidal_flat_trend.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_tidal_flat_extent']`** layer for more information.
-
 
 We used the [Murray Global Intertidal Change Dataset](https://www.intertidal.app/home) [@murray_2019] tidal flat extent data to estimate the proportional yearly change in tidal flat area using a linear regression model of years from 2001 up to 2013. This length of data is longer than we usually do (typically 5 years), but we feel we get a better estimate using this period of time. Proportional yearly change is determined by regressing extent on year, and the resulting slope is divided by the extent from the earliest year in the model and multiplied by 5 to get the predicted change in five years. 
 
@@ -926,8 +878,6 @@ Culturally Important Species  | https://www.pnas.org/doi/10.1073/pnas.2217303120
 ## Inland 1km area 
 #### [rgn_area_inland1km](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/rgn_area_inland1km.csv) {-} 
 
-See **`r layer_meta$name[layer_meta$layer == 'rgn_area']`** layer for more information.
-
 Area (km^2^) located from each region's land-sea interface to 1 km inland. 
 
 For coastal land areas, we extracted hi-resolution country boundary data from Esri [-@esri_2010], and rasterized it with a resolution to match our land-sea interface model. We grew this raster by 50 pixels to bridge gaps between the ESRI data and our land-sea model. Area values do not include inland lakes or EEZs.
@@ -938,7 +888,7 @@ For coastal land areas, we extracted hi-resolution country boundary data from Es
 ## Inland coastal protected areas 
 #### [lsp_prot_area_inland1km](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/lsp_prot_area_inland1km.csv) {-} 
 
-This includes protected areas 1km inland, but otherwise follows the methods described in **`r layer_meta$name[layer_meta$layer == 'lsp_prot_area_offshore3nm']`**.  
+This includes protected areas 1km inland, but otherwise follows the methods described. 
 
 #### Units {-} 
  km2
@@ -952,7 +902,6 @@ This includes protected areas 1km inland, but otherwise follows the methods desc
 
 *Subcategory: habitat destruction*
 
-See **`r layer_meta$name[layer_meta$layer == 'mar_coastalpopn_inland25mi']`** for more information about the population data.
 
 Coastal population data was converted to average coastal density by dividing by the total 25 mile inland area.  We then rescaled the data to have values between 0-1, by logging the density data and then dividing by the ln (maximum density) across all regions and years. 
 
@@ -1015,8 +964,6 @@ Transportation & shipping | Industry: maritime transport; <br> Occupations: ship
  
 ## Livelihood trend scores 
 #### [liv_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/liv_trend.csv) {-} 
-
-See **`r layer_meta$name[layer_meta$layer == 'liv_status']`** layer for more information about data and methods.  
 
 This layer provides calculated trend values for the livelihoods subgoal.  Livelihoods is calculated using job and wage data from marine sectors. 
 
@@ -1110,7 +1057,6 @@ h) The national system of marine and coastal protected areas is surrounded by su
 
 *Subcategory: habitat*
 
-See **`r layer_meta$name[layer_meta$layer == 'fp_habitat']`** layer for data and methods.
 
 #### Units {-} 
  scaled 0-1
@@ -1484,9 +1430,8 @@ These raw values were then normalized to 0-1 by dividing by the 99th quantile of
 ## Nutrient pollution trend 
 #### [cw_nutrient_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/cw_nutrient_trend.csv) {-} 
 
-See description for nutrient pollution layer **`r layer_meta$name[layer_meta$layer == 'po_nutrients']`**.
 
-The inverse of the pressure data (1 - **`r layer_meta$name[layer_meta$layer == 'po_nutrients_3nm']`**) was used to estimate nutrient trends for the clean water goal. The proportional yearly change was estimated using a linear regression model of the most recent five years of data (i.e., slope divided by data from the earliest year included in the regression model).  The slope was then multiplied by five to get the predicted change in 5 years.  
+The inverse of the pressure data (1 - `po_nutrients_3nm`) was used to estimate nutrient trends for the clean water goal. The proportional yearly change was estimated using a linear regression model of the most recent five years of data (i.e., slope divided by data from the earliest year included in the regression model).  The slope was then multiplied by five to get the predicted change in 5 years.  
 
 #### Units {-} 
  trend
@@ -1515,8 +1460,6 @@ This pressure layer models the difference in global distribution of the aragonit
 
 ## Offshore 3nm area 
 #### [rgn_area_offshore3nm](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/rgn_area_offshore3nm.csv) {-} 
-
-See **`r layer_meta$name[layer_meta$layer == 'rgn_area']`** layer for more information.
 
 Area (km^2^) located from each region's land-sea interface to 3nm offshore. 
 
@@ -1551,7 +1494,6 @@ Reference point was defined as the 99th quantile across year/region with no buff
 ## Pathogen pollution trend 
 #### [cw_pathogen_trend](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/cw_pathogen_trend.csv) {-}
 
-See description of data and methods in **`r layer_meta$name[layer_meta$layer == 'po_pathogens']`** layer.
 
 The proportional yearly change in pathogen pressure values were estimated using a linear regression model of the most recent five years of data (i.e., slope divided by data from the earliest year included in the regression model). The slope was then multiplied by five to get the predicted change in 5 years.  
 
@@ -1693,7 +1635,7 @@ Because SST measurements are less reliable where there is persistent ice, we cre
 ## Seaweed mariculture sustainability score 
 #### [np_seaweed_sust](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/np_seaweed_sust.csv) {-} 
 
-The seaweed sustainability layer is derived from the  **`r layer_meta$name[layer_meta$layer == 'mar_sustainability_score']`**. Here, we take the mariculture sustainability scores, and subset them for the seaweed species included in **`r layer_meta$name[layer_meta$layer == 'np_seaweed_tonnes']`**.
+The seaweed sustainability layer is derived from Table 7.3 in `mar_sustainability_score.` Here, we take the mariculture sustainability scores, and subset them for the seaweed species included in Table 7.3 in `np_seaweed_tonnes.`
 
 #### Units {-} 
  scaled 0-1
@@ -1769,7 +1711,6 @@ Reefs at Risk Revisited [@burke2011reefs] recorded the global presence of destru
 
 *Subcategory: habitat destruction*
 
-See **`r layer_meta$name[layer_meta$layer == 'hab_softbottom_health']`** layer to get more information about this layer.
 
 The Pressure score was calculated as one minus soft-bottom habitat condition.
 
@@ -1838,7 +1779,6 @@ This layer is a list of low and zero population regions based on Wikipedia.
 
 *Category: social*
 
-See **`r layer_meta$name[layer_meta$layer == 'wgi_all']`** for description of this layer.
 
 When used as a social pressure, 1 minus the Worldwide Governance Indicator [-@worldbank2023wgi] is used. 
 
@@ -1853,13 +1793,23 @@ When used as a social pressure, 1 minus the Worldwide Governance Indicator [-@wo
 
 *Category: social*
 
-See **`r layer_meta$name[layer_meta$layer == 'res_spi']`** for description of this layer.
 
 When used as a social pressure, 1 minus the SPI (Social Progress Index) is used.
 
 #### Units {-} 
  scaled 0-1
 
+## Notes for continuing this work:
+
+-   consider making this into 2 sections with the first 2 tables in the first section and the veeeeery long github user content (all layers Rmd) as the second section (it's extremely long... like super long and could be frustrating for users).
+
+-   look into formatting of long tables in Quarto websites (currently annoying to scroll to the side to read the full width of the long table -- see Table 7.1) -- floating/hover (not anchored to the bottom) scroll bar (horizontal scroll bar)
+
+-   make a section of which data layers apply to which goals -- like Table 7.1, maybe just edit it so Dimension (goal/subgoal) is before description?
+
+-   consider renaming tables (current names not awesome)
+
+-   try reading in the githubuser content (even though it's super long, could be good to just see what it looks like...)
 
 
 # References
